--- a/Notebook.Web/appsettings.json
+++ b/Notebook.Web/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "NotebookContext": "server=localhost;User Id=root;password=mysql;database=notebook"
   },
+  "Authentication": {
+    "GoogleClientId": "314963117668-69hle5uj9uc2sch6il92fcqfoifljjub.apps.googleusercontent.com",
+    "GoogleClientSecret": "cu4SSmuDNvw4whfSK1mU-EXr",
+    "FacebookClientId": "453698128797720",
+    "FacebookClientSecret": "859d92987f67613b6e4aebd09f344c68"
+  },
   "Logging": {
     "Path": "/wwwroot/system/logs"
   },
