--- a/Notebook.Web/Notebook.Web.csproj
+++ b/Notebook.Web/Notebook.Web.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Remove="Resources\Views\User\Groups.tr-TR.resx" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.10.0" />
@@ -19,6 +23,11 @@
 
   <ItemGroup>
     <Folder Include="Views\Shared\Components\Footer\" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <None Include="Resources\Views\User\Groups.tr-TR.resx" />
   </ItemGroup>
 
 </Project>
